--- a/src/Resources/styles/front/common/layout/header/contact-us.less
+++ b/src/Resources/styles/front/common/layout/header/contact-us.less
@@ -34,11 +34,9 @@
                 }
             }
 
-            .svg {
+            .svg-icon {
                 margin-right: 6px;
                 height: @contact-us-phone-icon-size;
-
-                font-size: @contact-us-phone-icon-size;
             }
         }
     }
