--- a/templates/Front/Content/Order/index.html.twig
+++ b/templates/Front/Content/Order/index.html.twig
@@ -17,6 +17,8 @@
 {% block infoRow %}
 {% endblock %}
 
+{% block headerLayoutClass %}web__header--small{% endblock %}
+
 {% block header %}
     {% set shopInfoPhoneNumber = getShopInfoPhoneNumber() %}
     {% set shopInfoPhoneHours = getShopInfoPhoneHours() %}
