--- a/templates/Front/Content/Search/searchBox.html.twig
+++ b/templates/Front/Content/Search/searchBox.html.twig
@@ -15,7 +15,7 @@
             </div>
             <div class="search__form__submit js-search-autocomplete-submit">
                 <button class="search__form__submit__button btn-no-style" type="submit">
-                    <i class="svg svg-search"></i>
+                    {% include 'Front/Svg/search.svg' %}
                 </button>
             </div>
         </div>
