--- a/src/Resources/styles/front/common/components/box/dropdown.less
+++ b/src/Resources/styles/front/common/components/box/dropdown.less
@@ -6,14 +6,18 @@
 @box-dropdown-padding-vertical: 0;
 @box-dropdown-padding-vertical-small: 0;
 @box-dropdown-font-size: 15px;
-@box-dropdown-user-size: 25px;
+@box-dropdown-icon-size: 25px;
 @box-dropdown-arrow-size: 8px;
 @box-dropdown-arrow-color: @color-f;
 @box-dropdown-open-bottom-gap: 11px;
 @box-dropdown-min-width: 115px;
 @box-dropdown-border-size: 3px;
+@box-dropdown-menu-icon-size: 20px;
+@box-dropdown-menu-icon-background: #093a57;
 
 @box-dropdown-item-height: 42px;
+@box-dropdown-item-height-mobile: 52px;
+@box-dropdown-item-width-mobile: 45px;
 @box-dropdown-item-bg: @color-f;
 @box-dropdown-item-bg-hover: @color-f;
 @box-dropdown-item-font-size: 13px;
@@ -27,20 +31,28 @@
 
     &__select {
         display: flex;
+        justify-content: center;
+        width: @box-dropdown-item-width-mobile;
+        height: @box-dropdown-item-height-mobile;
         align-items: center;
         position: relative;
-        padding: @box-dropdown-padding-vertical 32px @box-dropdown-padding-vertical @box-dropdown-padding-horizontal;
-        height: @box-dropdown-item-height;
 
-        border-radius: @radius;
-        background-color: @box-dropdown-bg;
-        box-shadow: @box-shadow;
         color: @color-f;
         font-weight: bold;
         font-size: @box-dropdown-font-size;
         text-decoration: none;
         transition: none;
         white-space: nowrap;
+
+        @media @query-lg {
+            width: auto;
+            height: @box-dropdown-item-height;
+            padding: @box-dropdown-padding-vertical 32px @box-dropdown-padding-vertical @box-dropdown-padding-horizontal;
+
+            border-radius: @radius;
+            background-color: @box-dropdown-bg;
+            box-shadow: @box-shadow;
+        }
 
         &:hover {
             text-decoration: none;
@@ -66,60 +78,159 @@
             }
         }
 
-        &__user {
-            margin-right: 10px;
-            margin-left: -10px;
+        &__menu {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
 
-            font-size: @box-dropdown-user-size;
-            opacity: 0.5;
+            font-size: @box-dropdown-menu-icon-size;
+            background-color: @box-dropdown-menu-icon-background;
+
+            @media @query-lg {
+                background-color: @box-dropdown-bg;
+            }
+
+            .open &  {
+                background-color: @box-dropdown-bg-hover;
+            }
+
+            .svg {
+                height: @box-dropdown-menu-icon-size;
+            }
+
+            &__text {
+                opacity: 0.7;
+                margin-top: 3px;
+
+                font-size: 10px;
+                font-family: @font-alt;
+                text-transform: uppercase;
+                color: @color-f;
+
+                .open &  {
+                    color: @color-base;
+                }
+            }
+        }
+
+        &__search {
+            height: @box-dropdown-icon-size;
+
+            .svg-icon {
+                &__item-1 {
+                    fill: @color-f;
+
+                    .open & {
+                        fill: @color-base;
+                    }
+
+                    @media @query-lg {
+                        fill: @color-base;
+                    }
+                }
+
+                &__item-2 {
+                    .open & {
+                        fill: @color-base;
+                    }
+                }
+            }
+        }
+
+        &__user {
+            height: @box-dropdown-icon-size;
+
+            @media @query-lg {
+                margin-right: 10px;
+                margin-left: -10px;   
+                opacity: 0.5;
+
+                .open & {
+                    opacity: 1;
+                }
+            }
+
+            .svg-icon {
+                &__item-1 {
+                    fill: @color-f;
+
+                    .open & {
+                        fill: @color-base;
+                    }
+                }
+
+                &__item-2 {
+                    fill: @color-turquoise;
+
+                    @media @query-lg {
+                        fill: @color-f;
+                    }
+
+                    .open & {
+                        fill: @color-base;
+                    }
+                }
+            }
         }
 
         &__text {
-            line-height: 17px;
+            display: none;
 
-            font-size: 16px;
+            @media @query-lg {
+                display: block;
+                line-height: 17px;
 
-            &__small {
-                font-size: 13px;
-                font-weight: 300;
+                font-size: 16px;
+
+                &__small {
+                    font-size: 13px;
+                    font-weight: 300;
+                }
             }
         }
 
         &__arrow {
-            position: absolute;
-            display: inline-block;
-            width: @box-dropdown-arrow-size;
-            height: @box-dropdown-arrow-size;
-            top: 50%;
-            transform: translateY(-50%);
-            right: 11px;
-            opacity: 0.5;
+            display: none;
+            
+            @media @query-lg {
+                position: absolute;
+                display: inline-block;
+                width: @box-dropdown-arrow-size;
+                height: @box-dropdown-arrow-size;
+                top: 50%;
+                transform: translateY(-50%);
+                right: 11px;
+                opacity: 0.5;
 
-            color: @box-dropdown-arrow-color;
-            font-size: @box-dropdown-arrow-size;
-
-            .open & {
-                color: @color-base;
-            }
-
-            &--down {
-                .svg;
-                .svg-triangle;
+                color: @box-dropdown-arrow-color;
+                font-size: @box-dropdown-arrow-size;
 
                 .open & {
-                    display: none;
+                    color: @color-base;
                 }
-            }
 
-            &--up {
-                .svg;
-                .svg-triangle;
-                transform: rotate(180deg) translateY(50%);
+                &--down {
+                    .svg;
+                    .svg-triangle;
 
-                display: none;
+                    .open & {
+                        display: none;
+                    }
+                }
 
-                .open & {
-                    display: inline-block;
+                &--up {
+                    .svg;
+                    .svg-triangle;
+                    transform: rotate(180deg) translateY(50%);
+
+                    display: none;
+
+                    .open & {
+                        display: inline-block;
+                    }
                 }
             }
         }
@@ -141,7 +252,10 @@
 
             border: @box-dropdown-border-size solid @color-box;
             border-radius: @radius;
-            border-top-right-radius: 0;
+
+            @media @query-vl {
+                border-top-right-radius: 0;
+            }
         }
 
         &__item {
@@ -185,15 +299,25 @@
 
 .box-dropdown__select {
     &--secondary {
-        background-color: @color-turquoise;
+        @media @query-lg {
+            background-color: @color-turquoise;
+        }
+    }
+
+    &--menu {
+        width: 51px;
     }
 
     .box-dropdown--without-arrow & {
-        padding-right: @box-dropdown-padding-horizontal;
+        @media @query-lg {
+            padding-right: @box-dropdown-padding-horizontal;
+        }
     }
 
     .box-dropdown--small-padding & {
-        padding: @box-dropdown-padding-vertical-small @box-dropdown-padding-horizontal-small;
+        @media @query-lg {
+            padding: @box-dropdown-padding-vertical-small @box-dropdown-padding-horizontal-small;
+        }
     }
 
     .box-dropdown--search & {
@@ -246,12 +370,10 @@
 
     .open & {
         &.box-dropdown__options--search {
-            left: -65px;
+            right: -92px;
             width: 300px;
 
             @media @query-md {
-                left: -90px;
-                right: -320px;
                 width: 445px;
             }
 
@@ -261,11 +383,10 @@
         }
 
         &.box-dropdown__options--login {
-            left: -115px;
             width: 300px;
+            right: -47px;
 
             @media @query-md {
-                right: -140px;
                 width: @box-login-width;
             }
 
