--- a/src/Resources/styles/front/common/layout/header.less
+++ b/src/Resources/styles/front/common/layout/header.less
@@ -1,5 +1,5 @@
 @header-cart-width: 38px;
-@header-height: 35px;
+@header-height: 52px;
 @header-mobile-button-size: 28px;
 @header-mobile-button-info-size: 16px;
 @header-mobile-button-dropdown-position: @web-header-mobile-dropdown-position;
@@ -18,13 +18,17 @@
     flex-wrap: wrap;
     align-items: center;
     min-height: @header-height;
-    padding-top: 12px;
+
+    @media @query-lg {
+        padding-top: 12px;
+    }
 
     @media @query-vl {
         padding-top: 30px;
     }
 
     &--small {
+        justify-content: space-between;
         margin-bottom: 29px;
         
         @media @query-lg {
@@ -52,10 +56,16 @@
 
 // Left part of header with logo
 .header__logo {
-    text-align: left;
-    width: @header-logo-width;
+    display: none;
+
+    @media @query-lg {
+        display: block;
+        text-align: left;
+        width: @header-logo-width;
+    }
 
     .header--small & {
+        display: block;
         width: @header-logo-width-small;
         margin: 0 auto 15px auto;
 
@@ -71,8 +81,11 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 20px;
+
+    @media @query-lg {
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
 
     @media @query-vl {
         width: calc(~"100% - @{header-logo-width}");
@@ -83,9 +96,26 @@
     &__menu {
         display: flex;
         align-items: center;
+        margin-right: @header-item-gap;
+
+        @media @query-lg {
+            margin-right: 0;
+        }
 
         @media @query-vl {
             display: none!important;
+        }
+    }
+
+    &__logo {
+        display: flex;
+
+        @media @query-lg {
+            display: none;
+        }
+
+        img {
+            width: 52px;
         }
     }
 
@@ -94,13 +124,20 @@
         flex-direction: row;
         align-items: center;
         justify-content: flex-end;
+        padding-right: 12px;
+
+        @media @query-lg {
+            padding-right: 0;
+        }
 
         @media @query-vl {
             width: @header-right-actions-width;
         }
 
         &__item {
-            margin-left: @header-item-gap-small;
+            @media @query-lg {
+                margin-left: @header-item-gap-small;
+            }
 
             @media @query-vl {
                 margin-left: @header-item-gap;
@@ -109,10 +146,11 @@
     }
 
     &__search {
-        margin-left: @header-item-gap-small;
+        margin-left: auto;
         
         @media @query-lg {
             width: @header-search-width-small;
+            margin-left: @header-item-gap-small;
         }
 
         @media @query-vl {
@@ -122,14 +160,6 @@
         @media @query-xl {
             margin-left: 74px;
             width: @header-search-width;
-        }
-
-        &__icon-menu {
-            position: relative;
-            line-height: @header-search-icon-size;
-            top: 2px;
-
-            font-size: @header-search-icon-size;
         }
 
         &__icon-search {
