--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -18,6 +18,8 @@
 {% block infoRow %}
 {% endblock %}
 
+{% block headerLayoutClass %}web__header--small{% endblock %}
+
 {% block header %}
     {% set shopInfoPhoneNumber = getShopInfoPhoneNumber() %}
     {% set shopInfoPhoneHours = getShopInfoPhoneHours() %}
