--- a/templates/Front/Content/Customer/orders.html.twig
+++ b/templates/Front/Content/Customer/orders.html.twig
@@ -50,7 +50,7 @@
                                 <td class="text-right">{{ order.totalPriceWithVat|priceWithCurrency(order.currency) }}</td>
                                 <td class="text-center">
                                     <a href="{{ url('front_customer_order_detail_registered', { orderNumber: order.number }) }}" class="in-icon in-icon--detail">
-                                        <i class="svg svg-search"></i>
+                                        {% include 'Front/Svg/search.svg' %}
                                     </a>
                                 </td>
                             </tr>
