--- a/templates/Front/Content/Stores/detail.html.twig
+++ b/templates/Front/Content/Stores/detail.html.twig
@@ -15,7 +15,7 @@
                     <div class="box-contact__block">
                         {% if store.telephone is not null %}
                             <a href="tel:{{ store.telephone }}" class="box-contact__block__text">
-                                <i class="svg svg-phone"></i>
+                                {% include 'Front/Svg/phone.svg' %}
                                 {{ 'Volejte na '|trans }} {{ store.telephone }}
                             </a>
                         {% endif %}
