--- a/src/Resources/styles/front/common/components/box/login.less
+++ b/src/Resources/styles/front/common/components/box/login.less
@@ -88,6 +88,7 @@
     padding: @box-login-padding-mobile;
 
     background: @color-f;
+    border-radius: 0 0 @radius @radius;
 
     @media @query-md {
         padding: @box-login-padding;
