--- a/src/Resources/styles/front/common/components/in/message.less
+++ b/src/Resources/styles/front/common/components/in/message.less
@@ -17,6 +17,7 @@
     font-size: 14px;
     text-transform: none;
     font-weight: normal;
+    border-radius: @radius-medium;
 
     li {
         color: @in-message-alert-text;
