--- a/src/Resources/styles/front/common/components/list/menu.less
+++ b/src/Resources/styles/front/common/components/list/menu.less
@@ -1,7 +1,8 @@
 @list-menu-padding-right: 25px;
 @list-menu-arrow-size: 10px;
 @list-menu-columns-count: 3;
-@list-menu-columns-gap: 8px;
+@list-menu-columns-gap: 30px;
+@list-menu-columns-gap-small: 16px;
 @list-menu-item-height: 36px;
 @list-menu-item-footer-gap: 47px;
 
@@ -67,6 +68,10 @@
             padding: 0 20px;
 
             @media @query-vl {
+                padding: 0;
+            }
+
+            @media @query-xl {
                 padding: 0 @list-menu-columns-gap 0 0;
             }
         }
@@ -96,6 +101,8 @@
                 top: @list-menu-item-height - 1px;
                 z-index: @z-index-above;
                 padding: 5px 0;
+                width: calc(~"100% + 10px");
+                min-width: 200px;
 
                 background-color: @color-f;
                 border-radius: 0 @radius @radius @radius;
@@ -117,18 +124,27 @@
             transition: none;
 
             @media @query-vl {
+                padding: 0 13px;
+            }
+
+            @media @query-xl {
                 padding: 0 15px;
             }
 
             &__arrow {
-                height: @list-menu-arrow-size;
-                margin-left: 5px;
-                opacity: 0.5;
+                display: none;
 
-                font-size: @list-menu-arrow-size;
+                @media @query-vl {
+                    display: inline-block;
+                    height: @list-menu-arrow-size;
+                    margin-left: 5px;
+                    opacity: 0.5;
 
-                .open &  {
-                    transform: rotate(180deg);
+                    font-size: @list-menu-arrow-size;
+
+                    .open & {
+                        transform: rotate(180deg);
+                    }
                 }
             }
 
@@ -140,9 +156,13 @@
 
             &--level-1 {
                 color: @color-f;
-                font-size: 16px;
+                font-size: @font-size-small;
                 font-weight: 700;
                 text-transform: uppercase;
+
+                @media @query-xl {
+                    font-size: 16px;
+                }
 
                 &:hover {
                     color: @color-f;
