--- a/src/Resources/styles/front/common/layout/header.less
+++ b/src/Resources/styles/front/common/layout/header.less
@@ -20,11 +20,11 @@
     min-height: @header-height;
 
     @media @query-lg {
-        padding-top: 12px;
+        padding: 20px 10px 0;
     }
 
     @media @query-vl {
-        padding-top: 30px;
+        padding: 30px 0 0;
     }
 
     &--small {
@@ -83,8 +83,7 @@
     justify-content: center;
 
     @media @query-lg {
-        margin-top: 10px;
-        margin-bottom: 20px;
+        margin: 20px 0;
     }
 
     @media @query-vl {
