--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -178,10 +178,13 @@
     flex-direction: column;
     margin-left: -@footer-newsletter-item-gap;
     padding-top: 30px;
+    margin-bottom: 0;
 
     @media @query-vl {
         flex-direction: row;
         align-items: flex-start;
+        padding-top: 50px;
+        margin-bottom: 34px;
     }
 
     &__item {
