Various random fixes.

--- a/src/Resources/styles/front/common/todo.less
+++ b/src/Resources/styles/front/common/todo.less
@@ -38,3 +38,8 @@ button.active {
 .padding-bottom-50 {
     padding-bottom: 50px;
 }
+
+.btn[disabled] {
+    opacity: 0.5;
+    cursor: no-drop;
+}
