--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -225,7 +225,7 @@
                     <div class="{{ listCssClass }}__item__info">
                         <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__info__title" href="{{ url('front_product_detail', {'id': product.id}) }}">
                             {{ product.name|striptags|raw }}
-                        </{{ productHeadingTagName|default('h2') }}>
+                        <{{ '/' ~ productHeadingTagName|default('h2') }}>
 
                         {% set productSellingPrice = getProductSellingPrice(product) %}
 
@@ -249,13 +249,23 @@
                             </div>
                         {% endif %}
 
-                        <div class="{{ listCssClass }}__item__info__availability">
-                            {{ deliveryDate.productAvailabilityWithDeliveryDate(product) }}
-                        </div>
+                        {% if product.isMainVariant %}
+                            <div class="{{ listCssClass }}__item__info__availability">
+                                {{ 'Dostupnost dle varianty'|trans }}
+                            </div>
 
-                        <div class="{{ listCssClass }}__item__add-button">
-                            {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, showAmountInput: false, type: 'smallWithoutIcon'})) }}
-                        </div>
+                            <a href="{{ url('front_product_detail', {'id': product.id}) }}" class="btn btn--success {{ listCssClass }}__item__button-add in-add-to-cart__button--small">
+                                {{- 'Choose variant'|trans -}}
+                            </a>
+                        {% else %}
+                            <div class="{{ listCssClass }}__item__info__availability">
+                                {{ deliveryDate.productAvailabilityWithDeliveryDate(product) }}
+                            </div>
+
+                            <div class="{{ listCssClass }}__item__add-button">
+                                {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, showAmountInput: false, type: 'smallWithoutIcon'})) }}
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
