PDFs with gift certificates are now generated when gift certificates are ordered. Those PDFs are then attached to emails.

--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Mail/template.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Mail/template.html.twig
@@ -137,13 +137,19 @@
             {{ self.mailTemplate(
                 'Dárkový poukaz'|trans,
                 giftCertificateTemplate,
-                form.giftCertificateTemplate
+                form.giftCertificateTemplate,
+                giftCertificateVariables,
+                [],
+                giftCertificateVariablesLabels
             ) }}
 
             {{ self.mailTemplate(
                 'Dárkový poukaz - aktivován'|trans,
                 giftCertificateActivatedTemplate,
-                form.giftCertificateActivatedTemplate
+                form.giftCertificateActivatedTemplate,
+                giftCertificateActivatedVariables,
+                [],
+                giftCertificateActivatedVariablesLabels
             ) }}
 
             {% embed '@ShopsysFramework/Admin/Inline/FixedBar/fixedBar.html.twig' %}
