admin main variant detail: variant are displayed as list
- it is not possible to delete or add variants using the form type
- created new ProductsListType form type that partly copies ProductsType as it was quite impossible to extend ProductsType nicely

--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Form/theme.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Form/theme.html.twig
@@ -54,3 +54,48 @@
         </td>
     </tr>
 {% endmacro %}
+
+{% block products_list_row -%}
+    {% if top_info_title is not empty %}
+        <strong>{{ top_info_title }}</strong>
+    {% endif %}
+    <div class="wrap-divider">
+        <div class="form-group">
+            <div class="form-group__title">
+                {{- form_label(form) -}}
+
+                <div class="form-group__error">
+                    {{- form_errors(form) -}}
+                </div>
+            </div>
+            {{- form_widget(form) -}}
+        </div>
+    </div>
+{%- endblock %}
+
+{% block products_list_label -%}
+    {{ label }}
+{% endblock -%}
+
+{% block products_list_widget %}
+    <table class="table-form">
+        <thead>
+        <tr class="table-form__row">
+            <td class="table-form__cell">{{ 'Name'|trans }}</td>
+        </tr>
+        </thead>
+        <tbody>
+        {% for product in form.vars.products %}
+            <tr class="table-form__row">
+                <td class="table-form__cell">
+                {% if product is not null %}
+                    <a href="{{ url('admin_product_edit', {id: product.id}) }}" target="_blank" class="btn-link-style btn-link-style--iconic-l">
+                        <span>{{ product|productListDisplayName }}</span>&nbsp;<i class="svg svg-forward-page"></i>
+                    </a>
+                {% endif %}
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
