desgin: fix position of button in products list

--- a/src/Resources/styles/front/common/components/list/basket-additionals.less
+++ b/src/Resources/styles/front/common/components/list/basket-additionals.less
@@ -79,13 +79,14 @@
 
         &__in {
             display: flex;
+            height: 100%;
             flex-direction: column;
             padding: 0 @list-basket-additionals-item-padding 3px @list-basket-additionals-item-padding;
         }
 
         &__block {
             display: flex;
-            height: 100%;
+            flex: 1;
             flex-direction: column;
 
             text-decoration: none;
