--- a/src/Resources/styles/front/common/components/list/products.less
+++ b/src/Resources/styles/front/common/components/list/products.less
@@ -91,7 +91,7 @@
 
         &__block {
             display: flex;
-            height: 100%;
+            flex: 1;
             flex-direction: column;
 
             text-decoration: none;
