--- a/src/Resources/styles/front/common/components/list/accessories-products.less
+++ b/src/Resources/styles/front/common/components/list/accessories-products.less
@@ -82,21 +82,21 @@
             display: flex;
             flex-direction: column;
             height: 100%;
-            padding: 0 @list-accessories-products-item-padding;
+            margin: 0 @list-accessories-products-item-padding;
+            padding: 10px;
+
+            &:hover {
+                box-shadow: @shadow;
+            }
         }
 
         &__block {
             display: flex;
             flex-direction: column;
-            height: 100%;
-            padding: 10px;
+            flex: 1;
 
             text-decoration: none;
             color: @color-base;
-
-            &:hover {
-                box-shadow: @shadow;
-            }
         }
 
         &__image {
