--- a/src/Resources/styles/front/common/main.less
+++ b/src/Resources/styles/front/common/main.less
@@ -57,6 +57,7 @@
 @import "components/in/article.less";
 @import "components/in/action.less";
 @import "components/in/add-to-cart.less";
+@import "components/in/availability.less";
 @import "components/in/badge.less";
 @import "components/in/bar-code.less";
 @import "components/in/disable.less";
