--- a/src/Resources/styles/front/common/layout/header/search.less
+++ b/src/Resources/styles/front/common/layout/header/search.less
@@ -83,6 +83,7 @@
         padding: 20px;
 
         background-color: @color-box;
+        border-radius: 0 0 @radius @radius; 
 
         @media @query-vl {
             top: @search-input-height;
