--- a/src/Resources/styles/front/common/layout/header/contact-us.less
+++ b/src/Resources/styles/front/common/layout/header/contact-us.less
@@ -3,17 +3,22 @@
 .contact-us {
     display: none;
 
-    @media @query-lg {
+    @media @query-vl {
         display: flex;
         align-items: center;
 
         font-family: @font-alt;
 
         &__open-hours {
-            opacity: 0.7;
+            display: none;
 
-            font-size: @font-size-extra-small;
-            color: @color-f;
+            @media @query-xl-nested {
+                display: block;
+                opacity: 0.7;
+
+                font-size: @font-size-extra-small;
+                color: @color-f;
+            }
         }
 
         &__phone {
